[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-quality-checker"
version = "0.1.0"
description = "A Python package for analyzing image quality."
authors = [{ name = "Ateeq Azam", email = "mr.ateeqazam@gmail.com" }]
license = { text = "CC BY-ND" }
readme = "README.md"
keywords = ["image processing", "image quality", "computer vision"]
dependencies = ["opencv-python", "numpy", "scipy", "scikit-learn"]

[project.urls]
Homepage = "https://github.com/semwaqas/image-quality-score"
Repository = "https://github.com/semwaqas/image-quality-score"